; ModuleID = '/home/carl/AnghaBench/mongoose/examples/NXP_K64/extr_clock_config.c_BOARD_BootClockRUN.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/NXP_K64/extr_clock_config.c_BOARD_BootClockRUN.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@g_defaultClockConfigRun = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@BOARD_XTAL0_CLK_HZ = common dso_local global i32 0, align 4
@kMCG_PllClkSelPll0 = common dso_local global i32 0, align 4
@SystemCoreClock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BOARD_BootClockRUN() #0 {
  %1 = call i32 (...) @CLOCK_SetSimSafeDivs()
  %2 = call i32 @CLOCK_InitOsc0(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 3))
  %3 = load i32, i32* @BOARD_XTAL0_CLK_HZ, align 4
  %4 = call i32 @CLOCK_SetXtal0Freq(i32 %3)
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 2, i32 4), align 4
  %6 = load i32, i32* @kMCG_PllClkSelPll0, align 4
  %7 = call i32 @CLOCK_BootToPeeMode(i32 %5, i32 %6, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 2, i32 3))
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 2, i32 2), align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 2, i32 1), align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 2, i32 0), align 4
  %11 = call i32 @CLOCK_SetInternalRefClkConfig(i32 %8, i32 %9, i32 %10)
  %12 = call i32 @CLOCK_SetSimConfig(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 1))
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaultClockConfigRun, i32 0, i32 0), align 4
  store i32 %13, i32* @SystemCoreClock, align 4
  ret void
}

declare dso_local i32 @CLOCK_SetSimSafeDivs(...) #1

declare dso_local i32 @CLOCK_InitOsc0(i32*) #1

declare dso_local i32 @CLOCK_SetXtal0Freq(i32) #1

declare dso_local i32 @CLOCK_BootToPeeMode(i32, i32, i32*) #1

declare dso_local i32 @CLOCK_SetInternalRefClkConfig(i32, i32, i32) #1

declare dso_local i32 @CLOCK_SetSimConfig(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
